<resources>
    <string name="app_name">【阿里云HttpDns】Demo程序</string>

    <string name="tab_basic">功能</string>
    <string name="tab_practice">案例</string>
    <string name="tab_setting">设置</string>

    <string name="china">中国大陆</string>
    <string name="china_hk">中国香港</string>
    <string name="singapore">新加坡</string>
    <string name="germany">德国</string>
    <string name="us">美国</string>

    <string name="pre_resolve_host_duplicate">%s域名已经被添加至预解析列表，请勿重复添加</string>

    <string name="input_the_resolve_host">要解析的域名</string>
    <string name="input_the_resolve_host_help_text">例如：ams-sdk-public-assets.oss-cn-hangzhou.aliyuncs.com</string>
    <string name="input_the_request_api">要请求的接口</string>
    <string name="input_the_request_api_help_text">例如: /example-resources.txt</string>
    <string name="resolve_and_request">解析并请求</string>
    <string name="resolve_host_empty">域名不能为空</string>
    <string name="host_is_ip">域名不能是IP地址</string>
    <string name="host_illegal">请输入正确格式的域名</string>
    <string name="schema_type">Schema类型</string>
    <string name="response_title">请求结果</string>
    <string name="body_large_see_log">Body请通过日志查看，关键字为httpdns</string>
    <string name="ok">好的</string>
    <string name="resolve_result">解析结果</string>
    <string name="content_show">网页内容</string>
    <string name="cache_clear">缓存已清空</string>
    <string name="pre_resolve_success">预解析成功</string>
    <string name="timeout_less_toast">超时时间不能小于1000ms</string>
    <string name="label_hello">Hello</string>
    <string name="label_resolve_hint">输入需要解析的域名\n马上开始解析吧！</string>
    <string name="hint_host_welcome_input">选择或输入需要解析的域名</string>
    <string name="resolve_sync">同步解析</string>
    <string name="resolve_async">异步解析</string>
    <string name="resolve_sync_nonblocking">同步非阻塞解析</string>
    <string name="resolve_start">开始解析</string>
    <string name="input_host_hint">选择或输入需要解析的域名</string>
    <string name="input_history">输入历史</string>
    <string name="clear_all">清空全部</string>
    <string name="control_host_list">控制台域名列表</string>
    <string name="host_resolve_alert">域名解析提醒</string>
    <string name="host_config_alert">在开始解析前，请将下方域名添加到阿里云控制台HTTPDNS的“域名列表”；否则无法返回解析结果</string>
    <string name="already_add_alert">若已添加，则忽略此消息</string>
    <string name="btn_text_know">知道了</string>
    <string name="re_resolve">重新解析</string>
    <string name="pre_resolve_host">预解析域名</string>
    <string name="clear_host_cache">清空域名缓存</string>
    <string name="label_ipv4">IPV4</string>
    <string name="label_ipv6">IPV6</string>
    <string name="resolve_nonblocking_check">同步非阻塞解析被选中</string>
    <string name="resolve_async_check">异步解析被选中</string>
    <string name="resolve_sync_check">同步解析被选中</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="input_host">输入域名</string>
    <string name="input_timeout">输入超时时间</string>
    <string name="timeout">超时时间</string>
    <string name="label_https">Https</string>
    <string name="label_http">Http</string>
    <string name="request_resolve_result">请求和解析结果</string>
    <string name="re_input">重新输入</string>
    <string name="request_result">请求结果</string>
    <string name="re_request">重新请求</string>
    <string name="common">通用</string>
    <string name="setting_hint">通用配置更改后，需要重启App以使更改生效</string>
    <string name="promise_expire_ip">允许过期IP</string>
    <string name="setting_resolve_timeout">设置解析超时时间</string>
    <string name="high_setting">高级配置</string>
    <string name="region">region</string>
    <string name="set_region">设置Region</string>
    <string name="help_center">帮助中心</string>
    <string name="about_us">关于我们</string>
    <string name="reset">恢复默认设置</string>
    <string name="jump_to_about_us">跳转关于我们页面</string>
    <string name="jump_help_center">跳转帮助中心</string>
    <string name="region_editor">region 编辑</string>
    <string name="clear_appointed_host_cache">清空指定域名缓存</string>
    <string name="clear_cache_host_list">配置需要清空缓存的域名列表</string>
    <string name="pre_resolve_host_host">预解析域名列表</string>
    <string name="set_pre_resolve_host_list">配置需要预解析的域名列表</string>
    <string name="promise_sdk_print_log">允许SDK打印日志</string>
    <string name="launch_sdk_print_log">开启SDK打印日志</string>
    <string name="net_change_auto_refresh">网络切换自动刷新</string>
    <string name="net_change_refresh_desc">网络切换后自动刷新解析结果缓存</string>
    <string name="promise_https">允许HTTPS</string>
    <string name="use_https_resolve">使用HTTPS协议解析</string>
    <string name="launch_perpetuation_cache_ip">开启持久化缓存IP</string>
    <string name="host_save_desc">域名解析结果,存储到本地数据库</string>
    <string name="promise_degrade">允许降级</string>
    <string name="promise_degrade_desc">解析失败后,允许降级到LocalDNS</string>
    <string name="go_back">返回</string>
    <string name="software_owner">" 阿里云（软件）有限公司版权所有\nCopyright @ 2009一2017 AIiyun.com \nAII Rights Reserved."</string>
    <string name="logo">logo</string>
    <string name="add_host">添加域名</string>
    <string name="more">更多</string>
    <string name="btn_check">选中按钮</string>
    <string name="btn_delete">删除按钮</string>
    <string name="resolve_fail_hint">该域名返回解析结果为空。\n\n可能原因\n1.该域名不在“域名列表”中。请将该域名添加到阿里云控制台HTTPDNS的“域名列表”。\n\n2.该域名返回解析结果为空。\n\n</string>
    <string name="sync_resolve_desc">使用同步解析接口解析域名，会阻塞当前线程，直到获得有效解析结果并返回。</string>
    <string name="async_resolve_desc">使用异步解析接口解析域名，不会阻塞当前线程，解析结果会通过回调的形式返回。</string>
    <string name="sync_non_blocking_resolve_desc">使用同步非阻塞接口解析域名，不会阻塞当前线程，但可能会返回空结果。</string>
    <string name="okhttp_case">OkHttp\n网络库\n最佳实践</string>
    <string name="webview_case">HTTPDNS\nWebview\n最佳实践</string>
    <string name="ip_conn_case">HTTPDNS\nIP直连\n最佳实践</string>
    <string name="exo_player_case">HTTPDNS\nExoPlayer\n最佳实践</string>
    <string name="web_okhttp_case">WebView\nOkHttp\n最佳实践</string>
    <string name="log_dns_resolve_fail">httpdns 未返回IP，走local dns</string>
    <string name="log_host_cannnot_resolve">host:%s 解析失败</string>
    <string name="log_resolve_result">httpdns %s 解析结果 %s</string>
    <string name="log_sni_request_error">SNI request error: %s</string>
    <string name="log_sni_request_response">SNI request response: %s</string>
    <string name="log_okhttp_request_url">requestUrl: %s</string>
    <string name="log_okhttp_request_fail">请求返回body为空</string>
    <string name="ttl_time">TTL: %s s</string>
    <string name="toast_double_click_exit">再按一次退出应用</string>
    <string name="toast_input_content_null">输入内容为空</string>
    <string name="input_url">url输入</string>
    <string name="input_url_example">例如: https://ams-sdk-public-assets.oss-cn-hangzhou.aliyuncs.com/example-resources.txt</string>
    <string name="url_web_example">https://ams-sdk-public-assets.oss-cn-hangzhou.aliyuncs.com/example-resources.txt</string>
    <string name="load_url">加载URL</string>
    <string name="toast_url_empty">url is empty</string>
    <string name="toast_url_mistake">请输入正确的url</string>
    <string name="player_url">播放资源URL输入</string>
    <string name="player_url_example">例如: https://ams-sdk-public-assets.oss-cn-hangzhou.aliyuncs.com/file_example_MP4_640_3MG.mp4</string>
    <string name="play">播放</string>
</resources>
