<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_function">

    <fragment
        android:id="@+id/navigation_function"
        android:name="com.alibaba.httpdns.android.demo.function.FunctionFragment"
        android:label="@string/tab_basic"
        tools:layout="@layout/httpdns_fragment_function" />

    <fragment
        android:id="@+id/navigation_case"
        android:name="com.alibaba.httpdns.android.demo.practice.CaseFragment"
        android:label="@string/tab_practice"
        tools:layout="@layout/httpdns_fragment_case" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.alibaba.httpdns.android.demo.setting.SettingFragment"
        android:label="@string/tab_setting"
        tools:layout="@layout/httpdns_fragment_setting" />
</navigation>