<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="WebViewCaseBinding">
        <import type="android.view.View" />
        <import type="android.text.TextUtils" />
        <variable
            name="viewModel"
            type="alibaba.httpdns_android_demo.best_practice.ResolveResultViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/httpdns_bg_input_host"
            android:paddingVertical="8dp"
            android:layout_margin="16dp">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tlWebViewCase"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                app:tabBackground="@color/httpdns_color_transparent"
                app:tabTextColor="@color/httpdns_color_A7BCCE"
                app:tabSelectedTextColor="@color/httpdns_color_424FF7"
                app:tabIndicatorColor="@color/httpdns_color_424FF7"
                app:tabIndicatorHeight="2dp"
                app:tabGravity="fill"
                app:tabRippleColor="@color/httpdns_color_transparent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/ti_resolve_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resolve_result"/>

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/ti_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_show"/>

            </com.google.android.material.tabs.TabLayout>

            <LinearLayout
                android:id="@+id/llResolveResult"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_margin="4dp"
                android:paddingStart="20dp"
                android:paddingTop="12dp"
                android:paddingEnd="13dp"
                android:paddingBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tlWebViewCase"
                android:background="@drawable/httpdns_resolve_result_bg">

                <TextView
                    android:id="@+id/tvHostAndTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="www.aliyun.com (38ms)"
                    android:text="@{viewModel.hostAndTime}"
                    android:textSize="12sp"
                    android:textColor="#3D3D3D"/>

                <TextView
                    android:id="@+id/tvTtl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    tools:text="TTL: 60s"
                    android:text="@{viewModel.ttl}"
                    android:textSize="12sp"
                    android:textColor="#3D3D3D"/>

                <TextView
                    android:id="@+id/tvIpv4Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/label_ipv4"
                    tools:visibility="visible"
                    android:visibility="@{TextUtils.isEmpty(viewModel.ipv4)?View.GONE:View.VISIBLE}"
                    android:textSize="12sp"
                    android:textColor="#1B58F4"/>

                <TextView
                    android:id="@+id/tvIPV4Result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@{viewModel.ipv4}"
                    tools:text="2233.1.1.1,233.1.1.1,233.1.1.1,233.1.1.1,233.1.1.1.233.1.1.1,233.1.1.1,233.1.1.1"
                    android:textSize="12sp"
                    android:textColor="#3D3D3D"/>

                <TextView
                    android:id="@+id/tvIpv6Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/label_ipv6"
                    tools:visibility="visible"
                    android:visibility="@{TextUtils.isEmpty(viewModel.ipv6)?View.GONE:View.VISIBLE}"
                    android:textSize="12sp"
                    android:textColor="#1B58F4"/>

                <TextView
                    android:id="@+id/tvIPV6Result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@{viewModel.ipv6}"
                    tools:text="2233.1.1.1,233.1.1.1,233.1.1.1,233.1.1.1,233.1.1.1.233.1.1.1,233.1.1.1,233.1.1.1"
                    android:textSize="12sp"
                    android:textColor="#3D3D3D"/>

            </LinearLayout>

            <android.webkit.WebView
                android:id="@+id/httpdns_webview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tlWebViewCase"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>


</layout>